--- a/SmartWalletApi/src/main/resources/application.properties
+++ b/SmartWalletApi/src/main/resources/application.properties
@@ -4,4 +4,9 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+
+api.security.token.secret=${JWT_SECRET:12345678}
+
 
